--- a/wolf-rails/Gemfile
+++ b/wolf-rails/Gemfile
@@ -1,10 +1,8 @@
 source 'https://rubygems.org'
-ruby '2.1.0'
+ruby '2.1.5'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
-gem 'rails', '4.1.0'
-# Use sqlite3 as the database for Active Record
-# gem 'sqlite3'
+gem 'rails', '~> 4.2.0'
 gem 'thin'
 gem 'pg'
 
@@ -24,18 +22,16 @@ gem 'turbolinks'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 gem 'jbuilder', '~> 2.0'
 # bundle exec rake doc:rails generates the API under doc/api.
-gem 'sdoc', '~> 0.4.0',		  group: :doc
+gem 'sdoc', '~> 0.4.0', group: :doc
 
 group :development do
 	# Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
 	gem 'spring'
-  	
-  	gem 'quiet_assets'
+	gem 'quiet_assets'
 end
 
-
 group :production do
-  gem 'rails_log_stdout',		   github: 'heroku/rails_log_stdout'
+  gem 'rails_log_stdout',           github: 'heroku/rails_log_stdout'
   gem 'rails3_serve_static_assets', github: 'heroku/rails3_serve_static_assets'
   gem 'rails_12factor'
 end
@@ -51,4 +47,3 @@ end
 
 # Use debugger
 # gem 'debugger', group: [:development, :test]
-
