--- a/wolf-rails/Gemfile
+++ b/wolf-rails/Gemfile
@@ -24,6 +24,10 @@ gem 'jbuilder', '~> 2.0'
 # bundle exec rake doc:rails generates the API under doc/api.
 gem 'sdoc', '~> 0.4.0', group: :doc
 
+source 'https://rails-assets.org' do
+  gem 'rails-assets-bootstrap', '~> 3.1.1'
+end
+
 group :development do
 	# Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
 	gem 'spring'
