--- a/wolf-rails/Gemfile
+++ b/wolf-rails/Gemfile
@@ -26,6 +26,7 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 
 source 'https://rails-assets.org' do
   gem 'rails-assets-bootstrap', '~> 3.1.1'
+	gem 'rails-assets-select2', '~> 3.4.5'
 end
 
 group :development do
