--- a/wolf-rails/Gemfile
+++ b/wolf-rails/Gemfile
@@ -28,6 +28,7 @@ source 'https://rails-assets.org' do
   gem 'rails-assets-bootstrap', '~> 3.1.1'
 	gem 'rails-assets-select2', '~> 3.4.5'
 	gem 'rails-assets-messenger', '~> 1.4.2'
+	gem 'rails-assets-jquery-flot', '~> 0.8.3'
 end
 
 group :development do
