--- a/wolf-rails/Gemfile
+++ b/wolf-rails/Gemfile
@@ -31,6 +31,7 @@ source 'https://rails-assets.org' do
   gem 'rails-assets-jquery-flot', '~> 0.8.3'
   gem 'rails-assets-flot.tooltip', '~> 0.8.3'
   gem 'rails-assets-moment', '~> 2.5.1'
+  gem 'rails-assets-bootstrap-datepicker', '~> 1.4.0'
   gem 'rails-assets-bootstrap-daterangepicker', '~> 1.3.6'
 end
 
