--- a/wolf-rails/Gemfile
+++ b/wolf-rails/Gemfile
@@ -30,6 +30,7 @@ source 'https://rails-assets.org' do
   gem 'rails-assets-messenger', '~> 1.4.2'
   gem 'rails-assets-jquery-flot', '~> 0.8.3'
   gem 'rails-assets-flot.tooltip', '~> 0.8.3'
+  gem 'rails-assets-animate-css', '~> 3.3.0'
   gem 'rails-assets-moment', '~> 2.5.1'
   gem 'rails-assets-bootstrap-switch', '~> 3.1.0'
   gem 'rails-assets-bootstrap-datepicker', '~> 1.4.0'
