--- a/wolf-rails/Gemfile
+++ b/wolf-rails/Gemfile
@@ -27,6 +27,7 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 source 'https://rails-assets.org' do
   gem 'rails-assets-bootstrap', '~> 3.1.1'
   gem 'rails-assets-font-awesome', '~> 4.3.0'
+  gem 'rails-assets-ionicons', '~> 1.4.1'
   gem 'rails-assets-select2', '~> 3.4.5'
   gem 'rails-assets-messenger', '~> 1.4.2'
   gem 'rails-assets-jquery-flot', '~> 0.8.3'
