--- a/wolf-rails/Gemfile
+++ b/wolf-rails/Gemfile
@@ -8,6 +8,7 @@ gem 'pg'
 gem 'sass-rails', '~> 4.0.3'
 gem 'uglifier', '>= 1.3.0'
 gem 'coffee-rails', '~> 4.0.0'
+gem 'compass-rails'
 gem 'jquery-rails'
 gem 'turbolinks'
 gem 'jbuilder', '~> 2.0'
@@ -23,6 +24,7 @@ source 'https://rails-assets.org' do
   gem 'rails-assets-jquery-flot', '~> 0.8.3'
   gem 'rails-assets-flot.tooltip', '~> 0.8.3'
   gem 'rails-assets-animate-css', '~> 3.3.0'
+  gem 'rails-assets-offline', '~> 0.7.13'
   gem 'rails-assets-moment', '~> 2.5.1'
   gem 'rails-assets-bootstrap-switch', '~> 3.1.0'
   gem 'rails-assets-bootstrap-datepicker', '~> 1.4.0'
