--- a/wolf-rails/Gemfile
+++ b/wolf-rails/Gemfile
@@ -26,6 +26,7 @@ source 'https://rails-assets.org' do
   gem 'rails-assets-animate-css', '~> 3.3.0'
   gem 'rails-assets-offline', '~> 0.7.13'
   gem 'rails-assets-moment', '~> 2.5.1'
+  gem 'rails-assets-summernote', '~> 0.6.10'
   gem 'rails-assets-bootstrap-switch', '~> 3.1.0'
   gem 'rails-assets-bootstrap-datepicker', '~> 1.4.0'
   gem 'rails-assets-bootstrap-daterangepicker', '~> 1.3.6'
