--- a/wolf-rails/Gemfile
+++ b/wolf-rails/Gemfile
@@ -23,6 +23,7 @@ source 'https://rails-assets.org' do
   gem 'rails-assets-jquery-minicolors', '~> 2.1.12'
   gem 'rails-assets-jquery-flot', '~> 0.8.3'
   gem 'rails-assets-flot.tooltip', '~> 0.8.3'
+  gem 'rails-assets-tether-shepherd', '~> 0.5.1'
   gem 'rails-assets-animate-css', '~> 3.3.0'
   gem 'rails-assets-offline', '~> 0.7.13'
   gem 'rails-assets-moment', '~> 2.5.1'
