--- a/wolf-rails/Gemfile
+++ b/wolf-rails/Gemfile
@@ -21,6 +21,7 @@ source 'https://rails-assets.org' do
   gem 'rails-assets-jquery-minicolors', '~> 2.1.12'
   gem 'rails-assets-jquery-flot', '~> 0.8.3'
   gem 'rails-assets-jquery-validate', '~> 1.11.1'
+  gem 'rails-assets-jquery-maskedinput', '~> 1.4.1'
   gem 'rails-assets-bootstrap', '~> 3.3.5'
   gem 'rails-assets-font-awesome', '~> 4.3.0'
   gem 'rails-assets-ionicons', '~> 2.0.1'
