--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,13 @@
 # Ignore bundler config.
 /.bundle
 
+# Ignore database schema
+/db/schema.rb
+
 # Ignore all logfiles and tempfiles.
 /log/*
 !/log/.keep
 /tmp
+
+# Ignore Mac finder artifacts
+.DS_Store
