--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -12,6 +12,7 @@
 
 default: &default
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  new_relic_license_key: <%= ENV["NEW_RELIC_LICENSE_KEY"] %>
   rollbar:
     server_side_token: <%= ENV["ROLLBAR_SERVER_SIDE_TOKEN"] %>
     client_side_token: <%= ENV["ROLLBAR_CLIENT_SIDE_TOKEN"] %>
