--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -13,10 +13,22 @@
 default: &default
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
   new_relic_license_key: <%= ENV["NEW_RELIC_LICENSE_KEY"] %>
-  domain_name: localhost:3000
+  domain_name: <%= ENV["DOMAIN_NAME"].presence || "localhost:3000" %>
   rollbar:
     server_side_token: <%= ENV["ROLLBAR_SERVER_SIDE_TOKEN"] %>
     client_side_token: <%= ENV["ROLLBAR_CLIENT_SIDE_TOKEN"] %>
+  facebook:
+    app_id: <%= ENV["FACEBOOK_APP_ID"] %>
+    secret: <%= ENV["FACEBOOK_SECRET"] %>
+  twitter:
+    api_key:    <%= ENV["TWITTER_API_KEY"] %>
+    api_secret: <%= ENV["TWITTER_API_SECRET"] %>
+  google:
+    client_id:     <%= ENV["GOOGLE_CLIENT_ID"] %>
+    client_secret: <%= ENV["GOOGLE_CLIENT_SECRET"] %>
+  linkedin:
+    api_key:    <%= ENV["LINKEDIN_API_KEY"] %>
+    secret_key: <%= ENV["LINKEDIN_SECRET_KEY"] %>
 
 development:
   <<: *default
